tests/basic/good/test17.pepa
r1 = 0.015     ;
r2 = 0.0003325 ;

P1 = (a, r1).P2;
P2 = (b, r2).P1;

P1 <> P1
